# BleHw

./: README.md
BleClientHw/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
BleClientHw/main/: BleClientHw.cpp  CMakeLists.txt  GattcConfig.h
BleClientHw/main/Hardware/: main.cpp
BleClientHw/main/Hardware/BleHw/: BleClientHw.cpp  BleClientHw.h
BleClientHw/main/Hardware/Peripheral/UartHw/: Uart.cpp  Uart.h  UartHw.cpp  UartHw.h
BleServerHw/: .cproject  .project  sdkconfig  sdkconfig.old
BleServerHw/main/: BleServerHw.cpp  BleServerHw.h  CMakeLists.txt  GattsConfig.h
Common/: CMakeLists.txt  main.cpp
Common/GpioHw/: GpioHw.cpp  GpioHw.h
Common/Json/: Json.cpp  Json.h
Common/LoggerHw/: LoggerHw.h
Common/MsgType/: BleMsgType.proto
Common/ParserAndSerializer/: BleParser.cpp  BleParser.h  BleParserAndSerializer.cpp  BleParserAndSerializer.h  BleSerializer.cpp  BleSerializer.h
Common/ParserAndSerializer/ParserAndSerializerFixture/: BleParserFixture.cpp  BleParserFixture.h  BleSerializerFixture.cpp  BleSerializerFixture.h
Common/Settings/: Settings.h
Common/SystemTimeHw/: SystemTimeHw.cpp  SystemTimeHw.h
